# demoforge

./: .demoforge-progress.json  .gitignore  NOTICE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: architecture.d2
results/: v0.1.0a1.json
scripts/: gen_readme_numbers.py  measure.py  verify_step.py
src/demoforge/: __init__.py  cli.py  ir.py  pipeline.py
src/demoforge/data/limits/: koch.yaml  lekiwi.yaml  so101.yaml
src/demoforge/engine/: __init__.py  feasibility.py  jerk.py  limits.py  path.py  retime.py
src/demoforge/health/: __init__.py
src/demoforge/io/: __init__.py  lerobot_v3.py  mock.py
tests/: conftest.py  test_contact.py  test_engine.py  test_honest_marketing.py  test_io_health.py  test_retime_property.py
